--- a/web/view/frame/frameList.html
+++ b/web/view/frame/frameList.html
@@ -9,11 +9,10 @@
     <script src="../plugins/datatables/dataTables.bootstrap.min.js"></script>
     <script>
     $(function () {
-        $('#brandListTable').DataTable({
+        $('#frameListTable').DataTable({
             "columnDefs": [
-                { "orderable": false, "targets": 1 },
-                { "orderable": false, "targets": 2 },
-                { "orderable": false, "targets": 4 }
+                { "orderable": false, "targets": 6 },
+                { "orderable": false, "targets": 8 }
             ],
             "paging": false,
             "lengthChange": false,
@@ -23,34 +22,16 @@
             "autoWidth": false
         });
     });
-    function deleteBrandWithImg(brandId,imageId){
-        BootstrapDialog.show({
-            title:'提醒',
-            message: '確定刪除風格嗎?可能會造成部分眼鏡沒有品牌分類',
-            buttons: [{
-                label: '確定',
-                cssClass: 'btn-danger',
-                action: function(){
-                    location='../controller/brandController.php?action=brandDelete&brandId='+ brandId + '&imageId=' + imageId ;
-                }
-            },{
-                label: '取消',
-                action: function(dialogItself){
-                    dialogItself.close();
-                }
-            }]
-        });
-    }
 
-    function deleteBrand(brandId){
+    function deleteframe(frameId){
         BootstrapDialog.show({
             title:'提醒',
-            message: '確定刪除風格嗎?可能會造成部分眼鏡沒有風格分類',
+            message: '確定刪除鏡框嗎?',
             buttons: [{
                 label: '確定',
                 cssClass: 'btn-danger',
                 action: function(){
-                    location='../controller/brandController.php?action=brandDelete&brandId='+ brandId;
+                    location='../controller/frameController.php?action=frameDelete&frameId='+ frameId;
                 }
             },{
                 label: '取消',
@@ -69,7 +50,7 @@
         \{include file="../common/menu.html"\}
         <div class="content-wrapper">
             <section class="content-header">
-                <h1>品牌檢視修改</h1>
+                <h1>鏡框檢視修改</h1>
             </section>
             <!-- Main content -->
             <section class="content">
@@ -83,39 +64,57 @@
                         \{/if\}
                         <div class="box box-info">
                             <div class="box-header">
-                                <h3 class="box-title">品牌列表</h3>
+                                <h3 class="box-title">鏡框列表</h3>
                             </div>
                             <div class="box-body">
-                                <table class="table table-striped" id="brandListTable">
+                                <table class="table table-striped" id="frameListTable">
                                     <thead>
                                         <tr style="background-color: #00c0ef; color: #fff;">
-                                            <th>品牌名稱</th>
-                                            <th>品牌描述</th>
-                                            <th>使用圖片</th>
+                                            <th>鏡框名稱</th>
+                                            <th>鏡框型號</th>                                            
+                                            <th>鏡框品牌</th>                                            
+                                            <th>鏡框框形</th>                                            
+                                            <th>鏡框材質</th>                                            
+                                            <th>鏡框顏色</th>                         
+                                            <th>是否上架到網路上</th>
                                             <th>最後更新時間</th>
                                             <th>操作選項</th>
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        \{foreach from=$allbrandData item=brand\}
+                                        \{foreach from=$allframeData item=frame\}
                                         <tr>
-                                            <td>\{$brand.brandName\}</td>
-                                            <td>\{$brand.description\}</td>
-                                            <td><img src="\{$brand.path\}" alt="尚未上傳圖片" width="350px"></td>
-                                            <td>\{$brand.lastUpdateTime\}</td>
+                                            <td>\{$frame.frameName\}</td>
+                                            <td>\{$frame.no\}</td>
+                                            <td>\{$frame.brandName\}</td>
+                                            \{if $frame.shape == 1\}
+                                                <td>圓</td>
+                                            \{else if $frame.shape == 2\}
+                                                <td>方</td>
+                                            \{else if $frame.shape == 3\}
+                                                <td>全</td>
+                                            \{else if $frame.shape == 4\}
+                                                <td>半</td>
+                                            \{else if $frame.shape == 5\}
+                                                <td>無</td>
+                                            \{else if $frame.shape == 6\}
+                                                <td>混和</td>
+                                            \{/if\}
+                                            <td>\{$frame.material\}</td>
+                                            <td>\{$frame.color\}</td>
+                                            \{if $frame.isLaunch == 1\}
+                                            <td>是</td>
+                                            \{else\}
+                                            <td>否</td>
+                                            \{/if\}
+                                            <td>\{$frame.lastUpdateTime\}</td>
                                             <td>
-                                                <a href="../controller/brandController.php?action=brandEditPrepare&brandId=\{$brand.brandId\}&imageId=\{$brand.imageId\} ">
+                                                <a href="../controller/frameController.php?action=frameEditPrepare&frameId=\{$frame.frameId\}">
                                                     <button class="btn btn-sm btn-primary"><i class="glyphicon glyphicon-pencil"></i></button>
                                                 </a>&nbsp;
-                                                \{if $brand.imageId != ''\}
                                                 <a href="#">
-                                                    <button class="btn btn-sm btn-danger" onclick="deleteBrandWithImg('\{$brand.brandId\}' , '\{$brand.imageId\}');"><i class="glyphicon glyphicon-remove"></i></button>
-                                                </a>&nbsp;
-                                                \{else\}
-                                                <a href="#">
-                                                    <button class="btn btn-sm btn-danger" onclick="deleteBrand('\{$brand.brandId\}');"><i class="glyphicon glyphicon-remove"></i></button>
+                                                    <button class="btn btn-sm btn-danger" onclick="deleteframe('\{$frame.frameId\}');"><i class="glyphicon glyphicon-remove"></i></button>
                                                 </a>
-                                                \{/if\}
                                             </td>
                                         </tr>
                                         \{/foreach\}
