--- a/web/view/part/partAdd.html
+++ b/web/view/part/partAdd.html
@@ -3,22 +3,23 @@
 
 <head>
     \{include file="../common/resource.html"\}
-    <script type="text/javascript" src="../plugins/bootstrap-filestyle/src/bootstrap-filestyle.min.js"> </script>
+    <script type="text/javascript" src="../plugins/bootstrap-filestyle/src/bootstrap-filestyle.min.js"></script>
+    <script type="text/javascript" src="../plugins/bootstrap-toggle/js/bootstrap2-toggle.js"></script>
+    <link rel="stylesheet" href="../plugins/bootstrap-toggle/css/bootstrap2-toggle.css"/>
     <script>
+        var imgCount = 1;
         $(document).ready(function() {
-            $("#brandImage").filestyle({
+            $("#partImage1").filestyle({
                 size: "nr",
                 input: false,
                 buttonText: "上傳圖片",
                 buttonName: "btn-info",
                 iconName: "glyphicon glyphicon-camera"
             });
-           
-
-            $("#brandImage").change(function() {
-                readURL(this, '#brandImg');
-            });
             
+            $("#partImage1").change(function() {
+                readURL(this, '#partImg1');
+            });
         });
 
         function readURL(input, id) {
@@ -45,13 +46,41 @@
         }
 
         function formValidation() {
-            if (fieldValidation('brandName') ) {
+            if (fieldValidation('Name') ) {
                 return true;
             } else {
-                BootstrapDialog.alert('請至少填寫品牌名稱');
+                BootstrapDialog.alert('請至少填寫零件名稱');
                 return false;
             }
         }
+
+        function addPartImg(i){
+            str = '<div id = "image' + i +'"><div class = "form-inline" style="display:inline-block;">';
+            str += '<input type="file" id="partImage' + i + '" name="partImage' + i +'" data-input="false" accept="image/*">&nbsp';
+            str += '<a class="btn btn-sm btn-danger" onclick="deletePartImg(' + i + ')"><i class="glyphicon glyphicon-remove"></i></a>';
+            str += '</div>';
+            str += '<img id="partImg' + i +'" class="img-thumbnail" style="display:none"><br></div>'
+                                            
+            $("#addImgStart").after(str);
+
+            $("#partImage"+ i).filestyle({
+                size: "nr",
+                input: false,
+                buttonText: "上傳圖片",
+                buttonName: "btn-info",
+                iconName: "glyphicon glyphicon-camera"
+            });
+           
+            $("#partImage"+ i).change(function() {
+                readURL(this, "#partImg"+ i);
+            });
+            
+        }
+
+        function deletePartImg(i){
+            $("#image"+i).remove();
+        }
+
     </script>
 </head>
 
@@ -61,7 +90,7 @@
         \{include file="../common/menu.html"\}
         <div class="content-wrapper">
             <section class="content-header">
-                <h1>品牌新增</h1>
+                <h1>零件新增</h1>
             </section>
             <section class="content">
                 <div class="row">
@@ -74,34 +103,57 @@
                         \{/if\}
                         <div class="box box-primary">
                             <div class="box-header with-border">
-                                <h3 class="box-title">新增品牌</h3>
+                                <h3 class="box-title">新增零件</h3>
                             </div>
                             <!-- form-->
-                            <form class="form-horizontal" method="post" enctype="multipart/form-data" action="../controller/brandController.php" onsubmit="formValidation()">
+                            <form class="form-horizontal" method="post" enctype="multipart/form-data" action="../controller/productController.php" onsubmit="formValidation()">
                                 <div class="box-body">
-                                    <div id="brandNameDiv" class="form-group">
-                                        <label for="brandName" class="col-sm-2 control-label">品牌名稱</label>
-                                        <div class="col-sm-10">
-                                            <input id="brandName" name="brandName" class="form-control" placeholder="輸入品牌名稱">
+                                    <div id="partNameDiv" class="form-group">
+                                        <label for="partName" class="col-sm-2 control-label">零件名稱</label>
+                                        <div class="col-sm-6">
+                                            <input id="partName" name="partName" class="form-control" placeholder="輸入零件名稱">
                                         </div>
                                     </div>
-                                    <div id="descriptionDiv" class="form-group">
-                                        <label for="description" class="col-sm-2 control-label">品牌描述</label>
-                                        <div class="col-sm-10">
-                                            <textarea id="description" name="description" class="form-control" placeholder="輸入品牌描述"  style= "overflow:hidden;"></textarea>
+                                    <div id="partTypeDiv" class="form-group">
+                                        <label for="partTypeDiv" class="col-sm-2 control-label">零件類別</label>
+                                        <div class="col-sm-3">
+                                            <select class="selectpicker" name="partType" id="partType">
+                                                <option value=1>鼻墊</option>
+                                                <option value=2>角套</option>
+                                                <option value=3>耳勾</option>
+                                                <option value=4>運動帶</option>
+                                                <option value=5>維修</option>
+                                                <option value=6>其他</option>
+                                            </select>
                                         </div>
                                     </div>
-                                     <div id="brandImageDiv" class="form-group">
-                                        <label class="col-sm-2 control-label">品牌圖片</label>
-                                        <div class="col-sm-10">
-                                            <input type="file" id="brandImage" name="brandImage" data-input="false" accept="image/*">
-                                            <img id="brandImg" class="img-thumbnail" style="display:none">
+                                    <div id="partSizeDiv" class="form-group">
+                                        <label for="partSize" class="col-sm-2 control-label">零件大小</label>
+                                        <div class="col-sm-6">
+                                            <input id="partSize" name="partSize" class="form-control" placeholder="輸入零件大小">
                                         </div>
+                                    </div>
+                                    <div id="partImagesDiv" class="form-group">
+                                        <label class="col-sm-2 control-label">零件圖片</label>
+                                        <div class="col-sm-10">
+                                            <div id="image1">
+                                            <div class = "form-inline" style="display:inline-block;">
+                                                <input type="file" id="partImage1" name="partImage1" data-input="false" accept="image/*">
+                                                <a class="btn btn-sm btn-primary" onclick="addPartImg(++imgCount)"><i class="glyphicon glyphicon-plus"></i></a>
+                                            </div>
+                                            <img id="partImg1" class="img-thumbnail" style="display:none">
+                                            </div>
+                                            <div id="addImgStart" name="addImgStart"></div>
+                                        </div>
+                                    </div>
+                                    <div id="isLaunceDiv" class="form-group">
+                                        <label for="isLaunce" class="col-sm-2 control-label">上架到網路上</label>
+                                        &nbsp&nbsp&nbsp&nbsp&nbsp<input type="checkbox" checked data-toggle="toggle" data-size="mini">
                                     </div>
                                 </div>
                                 <div class="box-footer" style="text-align: right;">
-                                    <a href="../controller/brandController.php?action=main" class="btn btn-warning">取消</a>
-                                    <input type="hidden" name="action" value="brandAdd">
+                                    <a href="../controller/partController.php?action=partAddPrepare" class="btn btn-warning">取消</a>
+                                    <input type="hidden" name="action" value="partAdd">
                                     <button type="submit" class="btn btn-success">確定</button>
                                 </div>
                             </form>
