--- a/web/view/part/partList.html
+++ b/web/view/part/partList.html
@@ -9,11 +9,9 @@
     <script src="../plugins/datatables/dataTables.bootstrap.min.js"></script>
     <script>
     $(function () {
-        $('#brandListTable').DataTable({
+        $('#partListTable').DataTable({
             "columnDefs": [
-                { "orderable": false, "targets": 1 },
-                { "orderable": false, "targets": 2 },
-                { "orderable": false, "targets": 4 }
+                { "orderable": false, "targets": 5 }
             ],
             "paging": false,
             "lengthChange": false,
@@ -23,34 +21,16 @@
             "autoWidth": false
         });
     });
-    function deleteBrandWithImg(brandId,imageId){
-        BootstrapDialog.show({
-            title:'提醒',
-            message: '確定刪除風格嗎?可能會造成部分眼鏡沒有品牌分類',
-            buttons: [{
-                label: '確定',
-                cssClass: 'btn-danger',
-                action: function(){
-                    location='../controller/brandController.php?action=brandDelete&brandId='+ brandId + '&imageId=' + imageId ;
-                }
-            },{
-                label: '取消',
-                action: function(dialogItself){
-                    dialogItself.close();
-                }
-            }]
-        });
-    }
 
-    function deleteBrand(brandId){
+    function deletePart(partId){
         BootstrapDialog.show({
             title:'提醒',
-            message: '確定刪除風格嗎?可能會造成部分眼鏡沒有風格分類',
+            message: '確定刪除零件嗎?',
             buttons: [{
                 label: '確定',
                 cssClass: 'btn-danger',
                 action: function(){
-                    location='../controller/brandController.php?action=brandDelete&brandId='+ brandId;
+                    location='../controller/partController.php?action=partDelete&partId='+ partId;
                 }
             },{
                 label: '取消',
@@ -86,36 +66,48 @@
                                 <h3 class="box-title">品牌列表</h3>
                             </div>
                             <div class="box-body">
-                                <table class="table table-striped" id="brandListTable">
+                                <table class="table table-striped" id="partListTable">
                                     <thead>
                                         <tr style="background-color: #00c0ef; color: #fff;">
-                                            <th>品牌名稱</th>
-                                            <th>品牌描述</th>
-                                            <th>使用圖片</th>
+                                            <th>零件名稱</th>
+                                            <th>零件類別</th>
+                                            <th>零件大小</th>
+                                            <th>是否上架到網路上</th>
                                             <th>最後更新時間</th>
                                             <th>操作選項</th>
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        \{foreach from=$allbrandData item=brand\}
+                                        \{foreach from=$allpartData item=part\}
                                         <tr>
-                                            <td>\{$brand.brandName\}</td>
-                                            <td>\{$brand.description\}</td>
-                                            <td><img src="\{$brand.path\}" alt="尚未上傳圖片" width="350px"></td>
-                                            <td>\{$brand.lastUpdateTime\}</td>
+                                            <td>\{$part.partName\}</td>
+                                            \{if $part.type == 1\}
+                                                <td>鼻墊</td>
+                                            \{else if $part.type == 2\}
+                                                <td>角套</td>
+                                            \{else if $part.type == 3\}
+                                                <td>耳勾</td>
+                                            \{else if $part.type == 4\}
+                                                <td>運動帶</td>
+                                            \{else if $part.type == 5\}
+                                                <td>維修</td>
+                                            \{else if $part.type == 6\}
+                                                <td>其他</td>
+                                            \{/if\}
+                                            <td>\{$part.size\}</td>
+                                            \{if $part.isLaunch == 1\}
+                                            <td>是</td>
+                                            \{else\}
+                                            <td>否</td>
+                                            \{/if\}
+                                            <td>\{$part.lastUpdateTime\}</td>
                                             <td>
-                                                <a href="../controller/brandController.php?action=brandEditPrepare&brandId=\{$brand.brandId\}&imageId=\{$brand.imageId\} ">
+                                                <a href="../controller/partController.php?action=partEditPrepare&partId=\{$part.partId\}">
                                                     <button class="btn btn-sm btn-primary"><i class="glyphicon glyphicon-pencil"></i></button>
-                                                </a>&nbsp;
-                                                \{if $brand.imageId != ''\}
-                                                <a href="#">
-                                                    <button class="btn btn-sm btn-danger" onclick="deleteBrandWithImg('\{$brand.brandId\}' , '\{$brand.imageId\}');"><i class="glyphicon glyphicon-remove"></i></button>
-                                                </a>&nbsp;
-                                                \{else\}
-                                                <a href="#">
-                                                    <button class="btn btn-sm btn-danger" onclick="deleteBrand('\{$brand.brandId\}');"><i class="glyphicon glyphicon-remove"></i></button>
                                                 </a>
-                                                \{/if\}
+                                                <a href="#">
+                                                    <button class="btn btn-sm btn-danger" onclick="deletePart('\{$part.partId\}');"><i class="glyphicon glyphicon-remove"></i></button>
+                                                </a>
                                             </td>
                                         </tr>
                                         \{/foreach\}
