Set statistic navigation bar to yellow

--- a/web/view/statistic/articleClick.html
+++ b/web/view/statistic/articleClick.html
@@ -15,7 +15,7 @@
     <script src="../theme/adminlte/plugins/datepicker/locales/bootstrap-datepicker.zh-TW.js"></script>
 </head>
 
-<body class="hold-transition skin-blue sidebar-mini">
+<body class="hold-transition skin-yellow sidebar-mini">
     <div class="wrapper">
         \{include file="../common/header.html"\} \{include file="../common/menu.html"\}
         <div class="content-wrapper">
