--- a/web/view/common/resource.html
+++ b/web/view/common/resource.html
@@ -18,7 +18,7 @@
 <link rel="stylesheet" href="../theme/AdminLTE/dist/css/skins/_all-skins.css">
 <!-- <link rel="stylesheet" href="~/theme/AdminLTE/dist/css/skins/skin-purple.min.css"> -->
 <!-- jQuery 3.2.1 -->
-<script src="../javascript/jQuery-3.2.1.min.js"></script>
+<script src="../javascript/jquery-3.2.1.min.js"></script>
 <!-- Bootstrap 3.3.5 , logout-->
 <script src="../theme/AdminLTE/bootstrap/js/bootstrap.min.js"></script>
 <!-- Bootstrap dialog 1.34.7 -->
