--- a/web/view/common/menu.html
+++ b/web/view/common/menu.html
@@ -56,7 +56,7 @@
                             </li>
                             <li>
                                 <a href="../controller/frameController.php?action=frameList">
-                            <i class="fa fa-tripadvisor"></i> 經框檢視/修改</a>
+                            <i class="fa fa-tripadvisor"></i> 鏡框檢視/修改</a>
                             </li>
                             <li>
                                 <a href="../controller/glassController.php?action=glassAddPrepare">
@@ -64,7 +64,7 @@
                             </li>
                             <li>
                                 <a href="../controller/glassController.php?action=glassList">
-                                    <i class="fa fa-circle-o"></i> 經片檢視/修改</a>
+                                    <i class="fa fa-circle-o"></i> 鏡片檢視/修改</a>
                             </li>
                             <li>
                                 <a href="../controller/lenController.php?action=lenAddPrepare">
