Add AllArticle , course and store controll

--- a/web/view/common/menu.html
+++ b/web/view/common/menu.html
@@ -180,7 +180,7 @@
                             <i class="fa fa-graduation-cap"></i>課程資訊新增</a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="../controller/courseController.php?action=courseList">
                             <i class="fa fa-graduation-cap"></i>課程資訊檢視/修改</a>
                     </li>
                 </ul>
