--- a/web/view/course/courseList.html
+++ b/web/view/course/courseList.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     \{include file="../common/resource.html"\}
+
     <script>
-    function deleteNews(articleId) {
+        function deleteCourse(courseId){
         BootstrapDialog.show({
-            title: '提醒',
-            message: '確定刪除嗎? 文章刪除後將無法回復。',
+            title:'提醒',
+            message: '確定刪除嗎? 課程刪除後將無法回復。',
             buttons: [{
                 label: '確定',
                 cssClass: 'btn-danger',
-                action: function() {
-                    location = '../controller/newsController.php?action=newsDelete&newsId=' + articleId;
+                action: function(){
+                    location='../controller/courseController.php?action=courseDelete&courseId='+ courseId;
                 }
-            }, {
+            },{
                 label: '取消',
-                action: function(dialogItself) {
+                action: function(dialogItself){
                     dialogItself.close();
                 }
             }]
@@ -27,10 +27,11 @@
 
 <body class="hold-transition skin-yellow sidebar-mini">
     <div class="wrapper">
-        \{include file="../common/header.html"\} \{include file="../common/menu.html"\}
+        \{include file="../common/header.html"\}
+        \{include file="../common/menu.html"\}
         <div class="content-wrapper">
             <section class="content-header">
-                <h1>趨勢新知檢視修改</h1>
+                <h1>課程文章檢視修改</h1>
             </section>
             <!-- Main content -->
             <section class="content">
@@ -41,7 +42,8 @@
                             <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
                             <h4 style="display: inline;">\{$error\}</h4>
                         </div>
-                        \{/if\} \{if $msg != ''\}
+                        \{/if\}
+                        \{if $msg != ''\}
                         <div class="alert alert-success alert-dismissable text-center">
                             <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
                             <h4 style="display: inline;">\{$msg\}</h4>
@@ -49,30 +51,30 @@
                         \{/if\}
                         <div class="box box-info">
                             <div class="box-header">
-                                <h3 class="box-title">文章列表</h3>
+                                <h3 class="box-title">課程列表</h3>
                             </div>
                             <div class="box-body">
                                 <table class="table table-striped">
                                     <thead>
                                         <tr style="background-color: #00c0ef; color: #fff;">
-                                            <th>文章標題</th>
-                                            <th>點擊次數</th>
+                                            <th>課程名稱</th>
                                             <th>最後更新時間</th>
+                                            <th>建立時間</th>
                                             <th>操作選項</th>
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        \{foreach from=$allnewsData item=article\}
+                                        \{foreach from=$allcourseData item=course\}
                                         <tr>
-                                            <td>\{$article.title\}</td>
-                                            <td>\{$article.ctr\}</td>
-                                            <td>\{$article.lastUpdateTime\}</td>
+                                            <td>\{$course.courseName\}</td>
+                                            <td>\{$course.lastUpdateTime\}</td>
+                                            <td>\{$course.createTime\}</td>
                                             <td>
-                                                <a href="../controller/newsController.php?action=newsEdit&newsId=\{$article.articleId\})">
+                                                <a href="../controller/courseController.php?action=courseEdit&courseId=\{$course.courseId\})">
                                                     <button class="btn btn-sm btn-primary"><i class="glyphicon glyphicon-pencil"></i></button>
                                                 </a>&nbsp;
                                                 <a href="#">
-                                                    <button class="btn btn-sm btn-danger" onclick="deleteNews('\{$article.articleId\}');"><i class="glyphicon glyphicon-remove"></i></button>
+                                                    <button class="btn btn-sm btn-danger" onclick="deleteCourse('\{$course.courseId\}');"><i class="glyphicon glyphicon-remove"></i></button>
                                                 </a>
                                             </td>
                                         </tr>
