--- a/web/view/education/educationAdd.html
+++ b/web/view/education/educationAdd.html
@@ -9,7 +9,7 @@
     <script type="text/javascript" src="../plugins/ckeditor/ckeditor.js"></script>
     <script>
     $(function() {
-        // Replace the <textarea id="editor"> with a CKEditor
+        // Replace the <textarea id="educationEditor"> with a CKEditor
         // instance, using default configuration.
         CKEDITOR.replace('educationEditor');
     });
@@ -26,6 +26,12 @@
             <section class="content">
                 <div class="row">
                     <div class="col-md-10">
+                        \{if $error != ''\}
+                        <div class="alert alert-warning alert-dismissable text-center">
+                            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+                            <h4 style="display: inline;">\{$error\}</h4>
+                        </div>
+                        \{/if\}
                         <div class="box box-primary">
                             <div class="box-header with-border">
                                 <h3 class="box-title">新增文章</h3>
@@ -34,9 +40,9 @@
                             <form class="form-horizontal" method="post" action="../controller/educationController.php">
                                 <div class="box-body">
                                     <div id="educationTitleDiv" class="form-group">
-                                        <label for="educationName" class="col-sm-2 control-label">標題</label>
+                                        <label for="educationTitle" class="col-sm-2 control-label">標題</label>
                                         <div class="col-sm-10">
-                                            <input id="educationName" name="educationName" class="form-control" placeholder="輸入文章標題">
+                                            <input id="educationTitle" name="educationTitle" class="form-control" placeholder="輸入文章標題">
                                         </div>
                                     </div>
                                     <div id="educationEditorDiv" class="form-group">
