--- a/web/view/life/lifeAdd.html
+++ b/web/view/life/lifeAdd.html
@@ -9,9 +9,9 @@
     <script type="text/javascript" src="../plugins/ckeditor/ckeditor.js"></script>
     <script>
     $(function() {
-        // Replace the <textarea id="editor"> with a CKEditor
+        // Replace the <textarea id="lifeEditor"> with a CKEditor
         // instance, using default configuration.
-        CKEDITOR.replace('editor');
+        CKEDITOR.replace('lifeEditor');
     });
     </script>
 </head>
@@ -37,26 +37,24 @@
                                 <h3 class="box-title">新增文章</h3>
                             </div>
                             <!-- form-->
-                            <form class="form-horizontal" method="post" action="../controller/lifeController.php" onsubmit="formValidation()">
+                            <form class="form-horizontal" method="post" action="../controller/lifeController.php">
                                 <div class="box-body">
-                                    <div id="educationTitle" class="form-group">
-                                        <label for="educationTitle" class="col-sm-2 control-label">標題</label>
+                                    <div id="lifeTitleDiv" class="form-group">
+                                        <label for="lifeTitle" class="col-sm-2 control-label">標題</label>
                                         <div class="col-sm-10">
-                                            <input id="educationTitle" name="educationTitle" class="form-control" placeholder="輸入文章標題">
+                                            <input id="lifeTitle" name="lifeTitle" class="form-control" placeholder="輸入文章標題">
                                         </div>
                                     </div>
-                                    <div id="educationContent" class="form-group">
-                                        <label for="content" class="col-sm-2 control-label">內容</label>
+                                    <div id="lifeContent" class="form-group">
+                                        <label for="lifeEditorDiv" class="col-sm-2 control-label">內容</label>
                                         <div class="col-sm-10">
-                                            <form>
-                                                <textarea id="editor" name="editor" rows="10" cols="80">
-                                                </textarea>
-                                            </form>
+                                            <textarea id="lifeEditor" name="lifeEditor" rows="10" cols="80">
+                                            </textarea>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="box-footer" style="text-align: right;">
-                                    <a href="../controller/lifeController.php?action=main" class="btn btn-warning">取消</a>
+                                    <a href="../controller/lifeController.php?action=lifeAddPrepare" class="btn btn-warning">取消</a>
                                     <input type="hidden" name="action" value="lifeAdd">
                                     <button type="submit" class="btn btn-success">確定</button>
                                 </div>
