--- a/web/view/store/storeAdd.html
+++ b/web/view/store/storeAdd.html
@@ -5,8 +5,6 @@
     \{include file="../common/resource.html"\}
     <script type="text/javascript" src="../plugins/bootstrap-filestyle/src/bootstrap-filestyle.min.js">
     </script>
-    <script>
-    </script>
 </head>
 
 <body class="hold-transition skin-yellow sidebar-mini">
@@ -18,7 +16,7 @@
             </section>
             <section class="content">
                 <div class="row">
-                    <div class="col-md-10">
+                    <div class="col-md-6">
                         \{if $error != ''\}
                         <div class="alert alert-warning alert-dismissable text-center">
                             <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
@@ -30,34 +28,40 @@
                                 <h3 class="box-title">新增店家</h3>
                             </div>
                             <!-- form-->
-                            <form class="form-horizontal" method="post" action="../controller/storeController.php" onsubmit="formValidation()">
+                            <form class="form-horizontal" method="post" action="../controller/storeController.php">
                                 <div class="box-body">
                                     <div id="storeNameDiv" class="form-group">
                                         <label for="storeName" class="col-sm-2 control-label">店名</label>
-                                        <div class="col-sm-7">
-                                            <input id="storeName" name="educationTitle" class="form-control" placeholder="輸入店家名稱">
+                                        <div class="col-sm-10">
+                                            <input id="storeName" name="storeName" class="form-control" placeholder="輸入店家名稱">
                                         </div>
                                     </div>
                                     <div id="storeAddressDiv" class="form-group">
                                         <label for="storeAddress" class="col-sm-2 control-label">地址</label>
-                                        <div class="col-sm-7">
-                                            <input id="storeAddress" name="educationTitle" class="form-control" placeholder="輸入地址">
+                                        <div class="col-sm-10">
+                                            <input id="storeAddress" name="storeAddress" class="form-control" placeholder="輸入地址">
                                         </div>
                                     </div>
                                     <div id="storePhoneDiv" class="form-group">
                                         <label for="storePhone" class="col-sm-2 control-label">聯絡電話</label>
-                                        <div class="col-sm-2">
-                                            <input id="storePhone" name="educationTitle" class="form-control" placeholder="輸入聯絡電話">
+                                        <div class="col-sm-3">
+                                            <input id="storePhone" name="storePhone" class="form-control" placeholder="輸入聯絡電話">
                                         </div>
-                                        <label for="storePhone" class="col-sm-2 control-label">營業時間</label>
-                                        <div class="col-sm-2">
-                                            <input id="storePhone" name="educationTitle" class="form-control" placeholder="輸入營業時間">
+                                        <label for="businessHours" class="col-sm-2 control-label">營業時間</label>
+                                        <div class="col-sm-4">
+                                            <input id="businessHours" name="businessHours" class="form-control" placeholder="輸入營業時間">
+                                        </div>
+                                    </div>
+                                    <div id="descriptionDiv" class="form-group">
+                                        <label for="description" class="col-sm-2 control-label">額外說明</label>
+                                        <div class="col-sm-10">
+                                            <input id="description" name="description" class="form-control" placeholder="輸入額外說明">
                                         </div>
                                     </div>
                                 </div>
                                 <div class="box-footer" style="text-align: right;">
-                                    <a href="../controller/stroeController.php?action=main" class="btn btn-warning">取消</a>
-                                    <input type="hidden" name="action" value="stroeAdd">
+                                    <a href="../controller/storeController.php?action=storeAddPrepare" class="btn btn-warning">取消</a>
+                                    <input type="hidden" name="action" value="storeAdd">
                                     <button type="submit" class="btn btn-success">確定</button>
                                 </div>
                             </form>
