--- a/web/view/common/menu.html
+++ b/web/view/common/menu.html
@@ -98,6 +98,10 @@
                             <i class="fa fa-user"></i>會員新增</a>
                     </li>
                     <li>
+                        <a href="../controller/userController.php?action=userSearchPrepare">
+                            <i class="fa fa-user"></i>會員搜尋</a>
+                    </li>
+                    <li>
                         <a href="../controller/userController.php?action=userEditPrepare">
                             <i class="fa fa-user"></i>會員檢視/修改</a>
                     </li>
