user: Fix userAdd page error

--- a/web/view/user/userAdd.html
+++ b/web/view/user/userAdd.html
@@ -70,10 +70,10 @@
                                     </div>
 
                                     <!--phoneNumber-->
-                                    <div id="phoneNameDiv" class="form-group">
-                                        <label for="password" class="col-sm-2 control-label">手機號碼</label>
+                                    <div id="phoneDiv" class="form-group">
+                                        <label for="phone" class="col-sm-2 control-label">手機號碼</label>
                                         <div class="col-sm-10">
-                                            <input id="phoneNumber" name="phoneNumber" class="form-control" placeholder="手機號碼">
+                                            <input id="phone" name="phone" class="form-control" placeholder="手機號碼">
                                         </div>
                                     </div>
 
@@ -89,8 +89,8 @@
                     </div>
                 </div>
             </section>
-
         </div>
+        \{include file="../common/footer.html"\}
     </div>
 </body>
 
